--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
+dynaconf = "^3.2.5"
 
 [tool.poetry.group.dev.dependencies]
 openai = "^1.16.2"
