--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ mysql-connector = "^2.2.9"
 pyqt6 = "^6.6.1"
 nltk = "^3.8.1"
 sense2vec = "^2.0.2"
+torch = "^2.3.0"
 
 [tool.poetry.group.dev.dependencies]
 openai = "^1.16.2"
