--- a/settings/configuration.toml
+++ b/settings/configuration.toml
@@ -1,9 +1,9 @@
 [config]
-model = "gpt-35"
+model = "gpt-4o"
 default_temperature = 0.2
 default_frequency_penalty = 0.1
 ai_timeout = 90 # seconds
 fallback_models  = []
 verbosity_level = 2 # 0,1,2
 max_requests_per_minute = 60
-max_tokens = 8192
+max_tokens = 4096
