map rendering prototype done

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,15 @@ python = "^3.11"
 dynaconf = "^3.2.5"
 mysql-connector = "^2.2.9"
 pyqt6 = "^6.6.1"
+py-translate = "^1.0.3"
+translate = "^3.6.1"
+deep-translator = "^1.11.4"
+geoplot = "^0.5.1"
+geopandas = "^0.14.4"
+geojsonio = "^0.0.3"
+pyogrio = "^0.8.0"
+folium = "^0.16.0"
+contextily = "^1.6.0"
 
 [tool.poetry.group.dev.dependencies]
 openai = "^1.16.2"
