--- a/settings/distractor_prompts.toml
+++ b/settings/distractor_prompts.toml
@@ -1,4 +1,5 @@
 [distractor_describe_related_prompt]
+model = "gpt-4o"
 temperature = 0.4
 frequency_penalty = 0.1
 system = """\
@@ -13,6 +14,7 @@ user = """\
 """
 
 [distractor_gen_sentences_prompt]
+model = "gpt-4o"
 temperature = 0.7
 frequency_penalty = 0.1
 system = """\
