--- a/settings/extractor_prompts.toml
+++ b/settings/extractor_prompts.toml
@@ -1,4 +1,5 @@
 [extractor_passage_key_sentences_prompt]
+model = "gpt-4o"
 temperature = 0.4
 frequency_penalty = 0.1
 system = """\
@@ -54,6 +55,7 @@ Answer:
 """
 
 [extractor_passage_revise_sentence_prompt]
+model = "gpt-4o"
 temperature = 0.2
 frequency_penalty = 0.1
 system = """\
@@ -89,6 +91,7 @@ Answer:
 """
 
 [extractor_sentence_to_item_prompt]
+model = "gpt-4o"
 temperature = 0.2
 frequency_penalty = 0.1
 system = """\
