image creation skeleton done

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ torch = "^2.3.0"
 deep-translator = "^1.11.4"
 geopandas = "^0.14.4"
 contextily = "^1.6.0"
+pillow = "^10.3.0"
 
 [tool.poetry.group.dev.dependencies]
 openai = "^1.16.2"
