--- a/settings/similarity_util_prompts.toml
+++ b/settings/similarity_util_prompts.toml
@@ -17,7 +17,7 @@ $$$
 $$$
 """
 
-[similarity_util_summary]
+[similarity_util_explain]
 model = "gpt-35"
 temperature = 0.2
 frequency_penalty = 0.1
@@ -25,12 +25,26 @@ system = """\
 You are a kind assistant.
 """
 user = """\
-I have a problem description, and I need you to summarize it in five or fewer sentences while including an explanation about why the answer is correct. 
-Focus on identifying the core issue, highlighting key details, stating the objectives clearly, and providing the reasoning behind the solution, and using simplified language. 
-Here is the problem description:
+Summarize following passage focusing on what social or historical topic does the problem mainly asking for, in five or less sentences.
 $$$
 {{ problem|trim }}
 $$$
-Please provide the combined summary and explanation, in a seamless manner without dividing it into separate sections.
+"""
+
+[similarity_util_keyword]
+model = "gpt-35"
+temperature = 0.2
+frequency_penalty = 0.1
+system = """\
+You are a kind assistant.
+"""
+user = """\
+In following passage, pick 10 or less keywords focusing about the main topic of the passage.
+You should not include "problem" as the keyword.
+Please print keywords in one line, separated with single space, without any unrequired symbols, and without any additional explanation.
+Here is the passage:
+$$$
+{{ passage|trim }}
+$$$
 """
 
