--- a/demo-frontend/package.json
+++ b/demo-frontend/package.json
@@ -11,6 +11,7 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "mathjax-full": "^3.2.2",
     "mathpix-markdown-it": "^1.3.8",
     "patch-package": "^8.0.0",
