feat: Demo back/front-ends (#17)
* create npm project
* works (kind of)
* fix row and made base64 compliant
* add comments
* border fixed
* api get written
* Implemented encoder (problem summarize & encode)
* Similarity UI & Caching (In progress)
* Completed similarity eval prototype implementation, improved viewer ui
* modified similarity prompt
* implemented difficulty & similarity for models.Problem type
* poetry add flask
* Added backend prototype
* resolved poetry.lock conflict
* Frontend in progress
* Specified type hint of similarity and difficulty functions
* Specified type hint of similarity and difficulty functions 2
* chore:
* chore: Remove prev
* feat: Set CORS for backend
* chore: Remove useless
* feat: Default problem viewer

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ deep-translator = "^1.11.4"
 geopandas = "^0.14.4"
 contextily = "^1.6.0"
 pillow = "^10.3.0"
+flask = "^3.0.3"
+flask-cors = "^4.0.1"
 
 [tool.poetry.group.dev.dependencies]
 openai = "^1.16.2"
